--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,36 @@
-appnope==0.1.3
-asttokens==2.0.8
-backcall==0.2.0
-blinker==1.5
-click==8.1.3
-decorator==5.1.1
-executing==1.0.0
-Flask==2.2.2
-Flask-DebugToolbar==0.13.1
-Flask-SQLAlchemy==3.0.2
-greenlet==1.1.3.post0
-importlib-metadata==4.12.0
-ipython==8.4.0
-itsdangerous==2.1.2
-jedi==0.18.1
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-matplotlib-inline==0.1.6
-numpy==1.23.2
-parso==0.8.3
-pexpect==4.8.0
+appnope==0.1.0
+backcall==0.1.0
+bcrypt==3.1.4
+blinker==1.4
+cffi==1.14.2
+Click==7.0
+decorator==4.3.0
+Faker==0.9.1
+Flask==1.0.2
+Flask-Bcrypt==0.7.1
+Flask-DebugToolbar==0.10.1
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+ipython==7.0.1
+ipython-genutils==0.2.0
+itsdangerous==0.24
+jedi==0.13.1
+Jinja2==2.10
+MarkupSafe==1.1.1
+parso==0.3.1
+pexpect==4.6.0
 pickleshare==0.7.5
-Pillow==9.2.0
-prompt-toolkit==3.0.30
-psycopg2-binary==2.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.13.0
-six==1.16.0
-SQLAlchemy==1.4.42
-stack-data==0.5.0
-torch==1.12.1
-traitlets==5.3.0
-typing_extensions==4.3.0
-wcwidth==0.2.5
-Werkzeug==2.2.2
-zipp==3.8.1
+prompt-toolkit==2.0.5
+psycopg2-binary==2.8.4
+ptyprocess==0.6.0
+pycparser==2.19
+Pygments==2.2.0
+python-dateutil==2.7.3
+simplegeneric==0.8.1
+six==1.11.0
+SQLAlchemy==1.2.12
+text-unidecode==1.2
+traitlets==4.3.2
+wcwidth==0.1.7
+Werkzeug==0.14.1
+WTForms==2.2.1
